kafka-cluster/base/clusters/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-1
  labels:
    app: kafka
    environment: production
