kafka-cluster/base/clusters/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-metrics
  namespace: kafka-operator
spec:
  selector:
    strimzi.io/name: cluster-1-kafka
    strimzi.io/component-type: kafka
  ports:
    - name: metrics
      port: 9404
      targetPort: tcp-prometheus
